--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset='utf-8' />
-  <title>[TITLE HERE]</title>
-  <link rel='stylesheet' href='assets/index.css'/>
-</head>
-<body>
-  <div id='main'>
-    <!-- <div id='bubble1' class='messages'>
-      <div class='received'><div>Hey 😊</div></div>
-      <div class='sent'><div>whats up</div></div>
-      <div class='received'><div>lots and lots and lots and 😊 lots of lines and also maybe an emoji or two</div></div>
-    </div> -->
-  </div>
-  <script src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
-  <script src='assets/anime.min.js'></script>
-  <script src='assets/bubbles.js'></script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>🥺 We need a “loading” emoji</title>
+    <link rel="stylesheet" href="assets/index.css" />
+  </head>
+  <body>
+    <div id="main"></div>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="assets/anime.min.js"></script>
+    <script src="assets/bubbles.js"></script>
+  </body>
 </html>
