--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>🥺 We need a “loading” emoji</title>
+    <link rel="icon" href="/Emoji4.png" />
     <link rel="stylesheet" href="assets/index.css" />
   </head>
   <body>
