--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>🥺 We need a “loading” emoji</title>
+    <title>We need a “loading” emoji for when you’re impatient</title>
     <link rel="icon" href="/Emoji4.png" />
     <link rel="stylesheet" href="assets/index.css" />
   </head>
