--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>We need a “loading” emoji for when you’re impatient</title>
+    <title>We need a “loading” emoji — for when you’re impatient</title>
     <link rel="icon" href="/Emoji4.png" />
     <link rel="stylesheet" href="assets/index.css" />
+    <meta
+      property="og:title"
+      content="We need a “loading” emoji — for when you’re impatient"
+    />
+    <meta
+      property="og:image"
+      content="https://nate-parrott.github.io/spinner-emoji/FB.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@nateparrott" />
+    <meta
+      name="twitter:title"
+      content="We need a “loading” emoji — for when you’re impatient"
+    />
+    <meta name="twitter:description" content="Help us make it a reality" />
+    <meta
+      name="twitter:image"
+      content="https://nate-parrott.github.io/spinner-emoji/TW.png"
+    />
   </head>
   <body>
     <div id="main"></div>
