--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>We need a “loading” emoji — for when you’re impatient</title>
-    <link rel="icon" href="/Emoji4.png" />
-    <link rel="stylesheet" href="assets/index.css" />
+    <link rel="icon" href="/anim/Spin1.png" />
+    <link rel="stylesheet" href="/assets/index.css" />
     <meta
       property="og:title"
       content="We need a “loading” emoji — for when you’re impatient"
@@ -28,7 +28,8 @@
   <body>
     <div id="main"></div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="assets/anime.min.js"></script>
-    <script src="assets/bubbles.js"></script>
+    <script src="/assets/anime.min.js"></script>
+    <script src="/assets/bubbles.js"></script>
+    <script src="/assets/favicon.js"></script>
   </body>
 </html>
