--- a/index.html
+++ b/index.html
@@ -26,10 +26,41 @@
     />
   </head>
   <body>
+    <div id="ctaContainer">
+      <div id="cta">
+        <p>We've all been there:</p>
+        <p>
+          Staring at your phone, waiting for a video to load.
+          <img class="animatedEmoji" src="anim/Spin1.png" />
+        </p>
+        <p>
+          Staring at your phone, waiting for your friend to show up.
+          <img class="animatedEmoji" src="anim/Spin1.png" />
+        </p>
+        <p>
+          Staring at your phone, waiting for 2020 to be over.
+          <img class="animatedEmoji" src="anim/Spin1.png" />
+        </p>
+        <p>
+          Life is all about waiting these days. Shouldn’t there be an emoji
+          about waiting?
+        </p>
+        <p>
+          We’re submitting a proposal for a “loading spinner emoji“ to the
+          Unicode Consortium — and we need as much help as we can get.
+        </p>
+        <p>
+          We’d love your
+          <a href="https://docs.google.com">help writing our application</a> 🥰
+          <img class="animatedEmoji" src="anim/Spin1.png" />
+        </p>
+      </div>
+    </div>
     <div id="main"></div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="assets/anime.min.js"></script>
     <script src="assets/bubbles.js"></script>
     <script src="assets/favicon.js"></script>
+    <script src="assets/animatedEmoji.js"></script>
   </body>
 </html>
