--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>We need a “loading” emoji — for when you’re impatient</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="anim/Spin1.png" />
     <link rel="stylesheet" href="assets/index.css" />
     <meta
