--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <img class="animatedEmoji" src="anim/Spin1.png" />
         </p>
         <p>
-          Life is all about waiting these days. Shouldn’t there be an emoji
+          These days, life is all about waiting. Shouldn’t there be an emoji
           about waiting?
         </p>
         <p>
