--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
         </p>
         <p>
           We’d love your
-          <a href="https://docs.google.com">help writing our application</a> 🥰
+          <a
+            href="https://docs.google.com/document/d/1xLOsjQi9BIrQcA5Vc0naFqEiOvW9vTdqx3YSInAc66E/edit?usp=sharing"
+            >help writing our application</a
+          >
+          🥰
           <img class="animatedEmoji" src="anim/Spin1.png" />
         </p>
       </div>
